UI: sidebar with action and command list

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -39,6 +39,15 @@
         "title": "Fehler beim Registrieren"
       }
     },
+    "sidebar": {
+      "command-popup": "Aktion",
+      "command": {
+        "logout": {
+          "title": "Abmelden",
+          "icon": "logout"
+        }
+      }
+    },
     "error": {
       "server": {
         "user": {
