UI: Logout dialog
add the dialog logout
update redux store for action logout-user

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -48,6 +48,17 @@
         }
       }
     },
+    "dialog": {
+      "logout": {
+        "title": "Abmelden",
+        "message": "Wollen Sie sich abmelden von Ihren Bereich?"
+      }
+    },
+    "command": {
+      "logout": "Ja, Abmelden",
+      "cancel": "Abbrechen",
+      "no": "Nein"
+    },
     "error": {
       "server": {
         "user": {
